# myi3status

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  README.mkd  i3status.go  pluie_dans_lheure.go  protocol.go  spotify.go
src/: main.rs  pluie_dans_lheure.rs  spotify.rs
