[package]
name = "myi3status"
version = "1.0.0"
edition = "2021"
authors = ["Boris Faure <boris@fau.re>"]
description = "A wrapper on i3status written in rust"
repository = "https://github.com/borisfaure/myi3status"
license = "BSD-2-Clause"
readme = "README.md"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.0"
reqwest = "0.11"
anyhow = "1.0"
